@@ -1,11 +1,11 @@
 package com.took.egg_plant_project.admin.service;
 
-
 import com.took.egg_plant_project.admin.repository.AdminMemberRepository;
 import com.took.egg_plant_project.constant.Role;
 import com.took.egg_plant_project.entity.Member;
-import com.took.egg_plant_project.member.MemberRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -16,6 +16,10 @@ public class AdminMemberService {
 
     private final AdminMemberRepository adminMemberRepository;
 
+    public Page<Member> findByRole(Role role, Pageable pageable) {
+        return adminMemberRepository.findByRole(role, pageable);
+    }
+
     public List<Member> findByRole(Role role) {
         return adminMemberRepository.findByRole(role);
     }
@@ -24,18 +28,15 @@ public class AdminMemberService {
         return adminMemberRepository.findAll();
     }
 
-    public List<Member> searchMembers(String category, String keyword) {
-        if (keyword == null || keyword.trim().isEmpty()) {
-            return adminMemberRepository.findAll();
+    public Page<Member> searchMembers(String category, String keyword, Pageable pageable) {
+        if ((category == null || keyword == null || keyword.isBlank())) {
+            return adminMemberRepository.findAllCustomSorted(pageable);
         }
 
-        if ("userName".equals(category)) {
-            return adminMemberRepository.findByUserNameContainingIgnoreCase(keyword);
-        } else if ("userID".equals(category)) {
-            return adminMemberRepository.findByUserIDContainingIgnoreCase(keyword);
-        } else {
-            return adminMemberRepository.findAll();
-        }
+        return switch (category) {
+            case "userName" -> adminMemberRepository.findByUserNameContainingIgnoreCase(keyword, pageable);
+            case "userID" -> adminMemberRepository.findByUserIDContainingIgnoreCase(keyword, pageable);
+            default -> adminMemberRepository.findAll(pageable);
+        };
     }
-
 }
